<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/mainView"
    tools:context=".views.fragments.MainFragment">

    <EditText
        android:id="@+id/searchCity"
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:elevation="8dp"
        android:hint="@string/placeholderSearchCity"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="282dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="40dp"
        android:text="@string/defaultCityName"
        android:textColor="@color/dark_blue"
        android:textFontWeight="700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCity"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="56dp"
        android:gravity="start"
        android:text="@string/defaultTemperature"
        android:textColor="@color/light_grey"
        android:textFontWeight="300"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="@+id/cityName" />

    <Button
        android:id="@+id/moreDetailsBtn"
        android:layout_width="167dp"
        android:layout_height="37dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_background"
        android:text="@string/moreDetails"
        app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
        app:layout_constraintEnd_toStartOf="@+id/weatherIcon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/nextWeekLabel"
        android:layout_width="278dp"
        android:layout_height="37dp"
        android:layout_marginBottom="164dp"
        android:gravity="center_horizontal"
        android:text="@string/titleNextDays"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cityName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weatherForecastRecycleView"
        android:layout_width="339dp"
        android:layout_height="152dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextWeekLabel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>